[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvs"
path = "src/bin/kvs.rs"

[dependencies]
bincode = "1.3"
clap = { version = "3.1", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_repr = "0.1.8"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
